force-app/main/default/objects/Product_Design_Preference_Insights__c/Product_Design_Preference_Insights__c.object-meta.xml
<CustomObject>
    <label>Product &amp; Design Preference Insights</label>
    <nameField>
        <displayFormat>PDP-{0000}</displayFormat>
        <label>Product &amp; Design Preference Insights Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product &amp; Design Preference Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>