force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Abandoned_Category__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Category__c</fullName>
    <label>Abandoned Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>