force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Average_Buying_Frequency_by_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Average_Buying_Frequency_by_Product_Type__c</fullName>
    <label>Average Buying Frequency by Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>