force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Avoided_Design_Style__c.field-meta.xml
<CustomField>
    <fullName>Avoided_Design_Style__c</fullName>
    <label>Avoided Design Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>