force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Brand_Collection_Affinity__c.field-meta.xml
<CustomField>
    <fullName>Brand_Collection_Affinity__c</fullName>
    <label>Brand / Collection Affinity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>