force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Chain_Length_Preference__c.field-meta.xml
<CustomField>
    <fullName>Chain_Length_Preference__c</fullName>
    <label>Chain Length Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>