force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product &amp; Design Preference Insights</relationshipLabel>
    <relationshipName>Product_Design_Preference_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>