force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Customisation_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Interest__c</fullName>
    <label>Customisation Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>