force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Diamond_Shape_Preference__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Shape_Preference__c</fullName>
    <label>Diamond Shape Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>