force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Gemstone_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Gemstone_Usage_Type__c</fullName>
    <label>Gemstone Usage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>