force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Gifting_Preference__c.field-meta.xml
<CustomField>
    <fullName>Gifting_Preference__c</fullName>
    <label>Gifting Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>