force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Material_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Material_Allergies__c</fullName>
    <label>Material Allergies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>