force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Most_Viewed_Category__c.field-meta.xml
<CustomField>
    <fullName>Most_Viewed_Category__c</fullName>
    <label>Most Viewed Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>