force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Preferred_Finish__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Finish__c</fullName>
    <label>Preferred Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>