force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Preferred_Gemstone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Gemstone__c</fullName>
    <label>Preferred Gemstone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>