force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Preferred_Gold_Purity__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Gold_Purity__c</fullName>
    <label>Preferred Gold Purity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>