force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Preferred_Occasion_Category__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Occasion_Category__c</fullName>
    <label>Preferred Occasion Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>