force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Preferred_Weight_Band__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Weight_Band__c</fullName>
    <label>Preferred Weight Band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>