force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Recently_Browsed_Products__c.field-meta.xml
<CustomField>
    <fullName>Recently_Browsed_Products__c</fullName>
    <label>Recently Browsed Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>