force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Ring_Size_Preference__c.field-meta.xml
<CustomField>
    <fullName>Ring_Size_Preference__c</fullName>
    <label>Ring Size Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>