force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Secondary_Product_Preference__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Product_Preference__c</fullName>
    <label>Secondary Product Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>