force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Solitaire_Interest_Score__c.field-meta.xml
<CustomField>
    <fullName>Solitaire_Interest_Score__c</fullName>
    <label>Solitaire Interest Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>