force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Trend_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Trend_Sensitivity__c</fullName>
    <label>Trend Sensitivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>