force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Wearing_Style_Preference__c.field-meta.xml
<CustomField>
    <fullName>Wearing_Style_Preference__c</fullName>
    <label>Wearing Style Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>