force-app/main/default/objects/Product_Design_Preference_Insights__c/fields/Wishlist_Trends__c.field-meta.xml
<CustomField>
    <fullName>Wishlist_Trends__c</fullName>
    <label>Wishlist Trends</label>
    <length>255</length>
    <type>Text</type>
</CustomField>